# team1

./: db.sqlite3  filmmer.json  manage.py  pyproject.toml  requirements.txt  urls.py  views.py
blog_ai/: asgi.py  settings.py  urls.py  wsgi.py
personality_diagnosis/: apps.py  models.py  urls.py  views.py
personality_diagnosis/migrations/: 0001_initial.py
templates/: base.html
templates/personality_diagnosis/: index.html  personality_result.html  result.html
