[tool.poetry]
name = "team1"
version = "0.1.0"
description = ""
authors = ["younyoun55 <chaeyoun5@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
openai = "^1.3.7"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
